deployments/webhook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-deployment
  labels:
    app: admisssion-controller
spec:
  selector:
    matchLabels:
      app: admisssion-controller
  replicas: 1
  template:
    metadata:
      labels:
        app: admisssion-controller
    spec:
      nodeName: kind-worker3
      containers:
      - name: admission-controller 
        image: open-grid/admission-controller:0.0.1
        imagePullPolicy: IfNotPresent
