deployments/webhook/deployment_cert_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-deployment
spec:
  template:
    spec:
      containers:
      - name: admission-controller
        ports:
        - containerPort: 8443
          name: webhook-server
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/certs
          name: cert
          readOnly: true
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: server-cert-secret
