deployments/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: admission-controller
