deployments/webhook/admission.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
    - v1
  clientConfig:
    service:
      name: webhook-service
      path: /mutate/pods
  name: pod-mutate.oga.org
  failurePolicy: Fail
  rules:
    - operations: ["CREATE"]
      apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pod-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
    - v1
  clientConfig:
    service:
      name: webhook-service
      path: /validate/pods
  failurePolicy: Fail
  name: pod-validate.oga.org
  rules:
    - operations: ["CREATE"]
      apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: deployment-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      path: /validate/pods
  failurePolicy: Fail
  name: deployments-validate.oga.org
  rules:
    - operations: ["CREATE","DELETE"]
      apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["deployments"]
  sideEffects: None
